# tethra

./: .gitignore  OLLAMA_INTEGRATION.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish.yml
.zed/: debug.json
src/: main.tsx  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/chat/: mod.rs
src-tauri/src/modules/database/: mod.rs
src-tauri/src/modules/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src-tauri/src/modules/settings/: mod.rs
src-tauri/src/modules/system/: mod.rs
src/components/: TitleBar.tsx  ai-message.tsx  app-sidebar.tsx  authKeyTab.tsx  custom-chat-transport.ts  dashboard.tsx  global-shortcuts.tsx  model-icon.tsx  model-selector.tsx  response.tsx  user-message.tsx
src/components/ai-elements/: context.tsx  conversation.tsx  message.tsx  prompt-input.tsx  reasoning.tsx
src/components/chat/: chat-container.tsx  chat-header.tsx  chat-view.tsx  empty-chat-state.tsx  message-list.tsx
src/components/icons/: anthropic.tsx  deepseek.tsx  gemini.tsx  google.tsx  grok.tsx  meta.tsx  mistral.tsx  moonshot.tsx  ollama.tsx  openai.tsx  openrouter.tsx  qwen.tsx  x.tsx  xai.tsx  zai.tsx  zeron.tsx
src/components/providers/: anthropic.ts  deepseek.ts  google.ts  groq.ts  index.ts  ollama.ts  openai.ts  openrouter.ts
src/components/ui/: card.tsx  code-block.tsx  command.tsx  dropdown-menu.tsx  empty-chat-icon.tsx  file-chip.tsx  message-skeleton.tsx  popover.tsx  select.tsx  sheet.tsx  sidebar.tsx  sonner.tsx  tabs.tsx  text-shimmer.tsx
src/hooks/: use-chat-logic.ts  use-chat.ts  use-code-highlighter.ts  use-message-manager.ts  use-model-manager.ts  use-title-generator.ts
src/lib/: api-keys.ts  chat-cache.ts  chat.ts  errors.ts  generate-title.ts  utils.ts
src/routes/: __root.tsx  index.tsx
src/routes/dashboard/: $id.tsx  index.tsx
src/routes/settings/: _AppearanceTab.tsx  _GeneralTab.tsx  _HardwareTab.tsx  _ProvidersTab.tsx  _SettingsSection.tsx  _SettingsTabs.tsx  index.tsx
