[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = false
opt-level = 0
debug = 1

[profile.release]
incremental = false
opt-level = 0
debug = false

[profile.dev.build-override]
opt-level = 0
debug = false
incremental = false

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2.7.0"
tauri-plugin-fs = "2.4.1"
tauri-plugin-shell = "2.3.0"
tauri-plugin-dialog = "2.3.2"
tauri-plugin-notification = "2.3.0"
sysinfo = { version = "0.30", default-features = false }
rusqlite = { version = "0.31", features = ["bundled"], default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
genai = { version = "=0.4.0-alpha.4" }
tokio = { version = "1", features = ["rt", "macros", "time"] }
ollama-rs = { version = "0.3.2", features = ["stream"] }
tokio-stream = "0.1.17"
dotenvy = "0.15"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
tauri-plugin-devtools = "2.0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.0"
openrouter-rs = "0.4.5"

[target.'cfg(windows)'.dependencies]
wmi = "0.13"
