[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = false
opt-level = 0
debug = 1

[profile.release]
incremental = false
opt-level = "z"  # Optimize for size
debug = false
lto = true  # Link-time optimization
codegen-units = 1  # Better optimization, slower compile
strip = true  # Strip symbols from binary
panic = "abort"  # Smaller binary

[profile.dev.build-override]
opt-level = 0
debug = false
incremental = false

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.7.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.3.0"
sysinfo = { version = "0.30", default-features = false }
rusqlite = { version = "0.31", features = ["bundled"], default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
ollama-rs = { version = "0.3.2", default-features = false, features = ["stream"] }
tokio-stream = { version = "0.1.17", default-features = false }
futures = { version = "0.3", default-features = false }
uuid = { version = "1.0", default-features = false, features = ["v4", "serde"] }

[dev-dependencies]
tauri-plugin-devtools = "2.0.1"

[target.'cfg(windows)'.dependencies]
wmi = "0.13"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
window-vibrancy = "0.7"
